# mp2-lab2-matrix

./: CMakeLists.txt
include/: tmatrix.h
samples/: sample_matrix.cpp
sln/Debug/: gtest.idb  gtest.lib  gtest.vcxproj.FileListAbsolute.txt  sample_utmatrix.exe.recipe  sample_utmatrix.ilk  sample_utmatrix.vcxproj.FileListAbsolute.txt  test_utmatrix.exe.recipe  test_utmatrix.vcxproj.FileListAbsolute.txt  vc143.idb
sln/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
sln/Debug/sample_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sln/Debug/test_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_utmatrix.lastbuildstate
test/: test_tmatrix.cpp  test_tvector.cpp
